# tic-tac-toe

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Trunk.toml  index.html  package.json  pnpm-lock.yaml
src/: app.rs  game.rs  main.rs
src/ui/: board.rs  cell.rs  controls.rs  mod.rs  score.rs
