[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
fastrand = "2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[profile.release]
opt-level = "z"
lto = true
